2008-07-08 17:29  art

	* [r128]
	  - cubemap example missing Data added

2008-07-08 12:25  art

	* [r127]
	  - Render-to-CubeMap example added
	  - the example should be extended to really changed the color
	  values of hte input cubemap texture. However this requires
	  transformation of texel coordinates from the cubespace into 2d
	  space. Hence this is just a color example ;)
	  - UnitInOut do now support renderin to cubemaps

2008-07-04 12:55  art

	* [r126]
	  From Sean Carmody
	  - support for output to CubeMaps from out of UnitInOut units
	  - implementation was extended for future implementation of
	  non-2d-output texture types
	  - small changes in the interface: all set-methods about output
	  texture are now moved to UnitInOut from Unit

2008-07-01 11:36  art

	* [r125]
	  From Bob Kuehne:
	  fixed PPU to work with the new birfucated osg/include header
	  structure. three changes to a FindOSG.cmake module, and then to
	  the
	  parent CMakeLists.txt which uses that to setup include paths.

2008-05-14 15:33  art

	* [r124]
	  - Version 0.2 tagged

2008-05-14 10:28  art

	* [r123]
	  - Removed uneccesarry files
	  - changed the documentation little bit to deprectate the current
	  interface of the Shader class

2008-05-13 09:36  art

	* [r122]
	  - osg::ref_ptr for the Camera object in the Processor class
	  changed to osg::observer_ptr to overcome possible memory leaks,
	  thanks to Stephane for that.
	  - smal doc and build fixes

2008-05-08 11:29  art

	* [r121]
	  - CMake build system changed to automatically detect the
	  installed osg version and to install the plugins under this
	  directory.
	  - thanks to Robert Osfield for his suggestions

2008-05-07 20:21  art

	* [r120]
	  - Disable the FBO clearing of undefined texture values, now a
	  simple temporary image is used to upload 0 values to fresh output
	  textures

2008-05-07 19:58  art

	* [r119]
	  

2008-05-07 19:57  art

	* [r118]
	  From Stephane Lamoliatte: